--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,13 +10,28 @@
 
 <body>
 
-    <div class="w-full min-h-screen flex flex-col items-center justify-center bg-zinc-800 gap-5">
+    <div class="w-full min-h-screen flex flex-col items-center justify-center bg-zinc-800 gap-0 text-center select-none">
 
-        <h2 class="text-white font-semibold text-xl cursor-pointer">Chess</h2>
+        <h2 class="text-white font-semibold text-2xl cursor-pointer">Chess</h2>
 
-        <div class="chessboard w-96 h-96 bg-green-200   rounded-sm overflow-hidden shadow-2xl">
+        <h2 id="role" class="text-gray-300 text-sm font-semibold cursor-pointer text-center mb-5"></h2>
+
+        <div class="chessboard w-96 h-96 bg-green-200 rounded-sm overflow-hidden shadow-2xl">
 
         </div>
+
+        <div id="status" class="mt-5 text-gray-300 font-semibold text-xl cursor-pointer">
+
+        </div>
+
+        <div id="message" class="mt-5 text-gray-300 font-semibold text-xl cursor-pointer">
+
+        </div>
+
+        <div id="connection" class="mt-5 text-gray-300 font-semibold text-xl cursor-pointer">
+            Waiting for another player to join...
+        </div>
+
     </div>
 
     <script src="https://cdn.socket.io/4.7.5/socket.io.min.js"
