--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,19 +16,19 @@
 
         <h2 id="role" class="text-gray-300 text-sm font-semibold cursor-pointer text-center mb-5"></h2>
 
-        <div class="chessboard w-96 h-96 bg-green-200 rounded-sm overflow-hidden shadow-2xl">
+        <div class="chessboard w-96 aspect-square max-w-[90vw] bg-green-200 rounded-sm overflow-hidden shadow-2xl">
 
         </div>
 
-        <div id="status" class="mt-5 text-gray-300 font-semibold text-xl cursor-pointer">
+        <div id="status" class="mt-5 text-gray-300 font-semibold  sm:text-xl cursor-pointer">
 
         </div>
 
-        <div id="message" class="mt-5 text-gray-300 font-semibold text-xl cursor-pointer">
+        <div id="message" class="mt-5 text-gray-300 font-semibold  sm:text-xl cursor-pointer">
 
         </div>
 
-        <div id="connection" class="mt-5 text-gray-300 font-semibold text-xl cursor-pointer">
+        <div id="connection" class="mt-5 text-gray-300 font-semibold sm:text-xl cursor-pointer">
             Waiting for another player to join...
         </div>
 
