--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,7 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chess</title>
+    <title>Multiplayer Chess Game | Pushkar | Full Stack Dev.</title>
+    <meta name="description" content="Multiplayer Chess Game made by Pushkar Kumar Sah | Express.js | Socket.io | ejs | Chess.js">
+    <link rel="shortcut icon" href="/images/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="/css/output.css">
 </head>
 
@@ -12,7 +14,7 @@
 
     <div class="w-full min-h-screen flex flex-col items-center justify-center bg-zinc-800 gap-0 text-center select-none">
 
-        <h2 class="text-white font-semibold text-2xl cursor-pointer">Chess</h2>
+        <h2 class="text-white font-semibold text-2xl cursor-pointer">Chess.</h2>
 
         <h2 id="role" class="text-gray-300 text-sm font-semibold cursor-pointer text-center mb-5"></h2>
 
