--- a/public/css/output.css
+++ b/public/css/output.css
@@ -570,8 +570,24 @@ video {
   aspect-ratio: 1 / 1;
 }
 
-.min-h-screen {
-  min-height: 100vh;
+.h-\[70vh\] {
+  height: 70vh;
+}
+
+.min-h-\[70vh\] {
+  min-height: 70vh;
+}
+
+.min-h-\[80vh\] {
+  min-height: 80vh;
+}
+
+.min-h-\[90vh\] {
+  min-height: 90vh;
+}
+
+.min-h-\[88vh\] {
+  min-height: 88vh;
 }
 
 .w-96 {
@@ -618,6 +634,10 @@ video {
 
 .rounded-sm {
   border-radius: 0.125rem;
+}
+
+.border-2 {
+  border-width: 2px;
 }
 
 .bg-green-200 {
