--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,9 +10,9 @@
     <link rel="stylesheet" href="/css/output.css">
 </head>
 
-<body>
+<body class="bg-zinc-800 flex items-center justify-center min-h-[88vh]">
 
-    <div class="w-full min-h-screen flex flex-col items-center justify-center bg-zinc-800 gap-0 text-center select-none">
+    <div class="w-full  flex flex-col items-center justify-center gap-0 text-center select-none">
 
         <h2 class="text-white font-semibold text-2xl cursor-pointer">Chess.</h2>
 
